@@ -86,8 +86,7 @@ exportMethods(show,
               plotGrid,
               plotFeatures,
               plotCrossMatching,
-              plotCrossMatchingFdr,
-              plotCrossMatchingBoxplots,
+              plotCrossMatchingSummary,
               ## importers
               loadSpectra,
               loadFragments,
